; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/fsdb/extr_fsdbutil.c_crack.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/fsdb/extr_fsdbutil.c_crack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crack.argv = internal global [8 x i8*] zeroinitializer, align 16
@.str = private unnamed_addr constant [4 x i8] c" \09\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @crack(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i8*, i8** %3, align 8
  store i8* %8, i8** %6, align 8
  store i32 0, i32* %5, align 4
  br label %9

9:                                                ; preds = %39, %2
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 8
  br label %15

15:                                               ; preds = %12, %9
  %16 = phi i1 [ false, %9 ], [ %14, %12 ]
  br i1 %16, label %17, label %42

17:                                               ; preds = %15
  br label %18

18:                                               ; preds = %28, %17
  %19 = call i8* @strsep(i8** %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i8* %19, i8** %7, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %18
  %22 = load i8*, i8** %7, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 0
  br label %26

26:                                               ; preds = %21, %18
  %27 = phi i1 [ false, %18 ], [ %25, %21 ]
  br i1 %27, label %28, label %29

28:                                               ; preds = %26
  br label %18

29:                                               ; preds = %26
  %30 = load i8*, i8** %7, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %37

32:                                               ; preds = %29
  %33 = load i8*, i8** %7, align 8
  %34 = load i32, i32* %5, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds [8 x i8*], [8 x i8*]* @crack.argv, i64 0, i64 %35
  store i8* %33, i8** %36, align 8
  br label %38

37:                                               ; preds = %29
  br label %42

38:                                               ; preds = %32
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %5, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %5, align 4
  br label %9

42:                                               ; preds = %37, %15
  %43 = load i32, i32* %5, align 4
  %44 = load i32*, i32** %4, align 8
  store i32 %43, i32* %44, align 4
  ret i8** getelementptr inbounds ([8 x i8*], [8 x i8*]* @crack.argv, i64 0, i64 0)
}

declare dso_local i8* @strsep(i8**, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
